feat: add commits table to Review tab
- Introduce `MergeAgent` integration in `SessionChangesPanel`
- Add context menu support to `FileTreePanel` for project files.
- Refactor `Chrome` and `ToolsPane` to remove the dedicated Changes tab
- Remove redundant PR review tab content from `CreatePullRequestDialog`.